--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="google-site-verification" content="jhhyRoouDt4szu3Tes40avO8FwlQbFwgObjpQMLBjWw" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Expert House Cleaners Near Me: Why Choosing Elevated Cleaning Services in Boca Raton Makes Sense</title>
